--- a/Backend/package.json
+++ b/Backend/package.json
@@ -2,10 +2,17 @@
   "name": "vendora",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "bcryptjs": "^3.0.3",
+    "mongoose": "^9.1.5",
+    "nodemon": "^3.1.11"
+  }
 }
