feat(auth): implement role-based authentication and frontend integration
- add role-specific validation for vendor signup (businessName required)
- enhance JWT payload with user details (name, email) for frontend
- implement conditional login/signup responses with user data
- add CORS configuration for frontend-backend communication
- create AuthContext with profile checking and responsive navbar
- implement login/signup pages with role selection and toast notifications

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vendora",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcryptjs": "^3.0.3",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.5",
